Adding swagger tags and parameters
